// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`models should properly generate object type class for mongo prisma model with nested types: User 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
exports.User = void 0;
const tslib_1 = require(\\"tslib\\");
const TypeGraphQL = tslib_1.__importStar(require(\\"type-graphql\\"));
const UserAddress_1 = require(\\"../models/UserAddress\\");
class User {
}
exports.User = User;
tslib_1.__decorate([
    TypeGraphQL.Field(_type => String, { nullable: false }),
    tslib_1.__metadata(\\"design:type\\", String)
], User.prototype, \\"id\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.Field(_type => TypeGraphQL.Int, { nullable: true }),
    tslib_1.__metadata(\\"design:type\\", Number)
], User.prototype, \\"age\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.Field(_type => UserAddress_1.UserAddress, { nullable: false }),
    tslib_1.__metadata(\\"design:type\\", UserAddress_1.UserAddress)
], User.prototype, \\"address\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.ObjectType(\\"User\\", {})
], User);
"
`;

exports[`models should properly generate object type class for mongo prisma model with nested types: UserAddress 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
exports.UserAddress = void 0;
const tslib_1 = require(\\"tslib\\");
const TypeGraphQL = tslib_1.__importStar(require(\\"type-graphql\\"));
class UserAddress {
}
exports.UserAddress = UserAddress;
tslib_1.__decorate([
    TypeGraphQL.Field(_type => String, { nullable: false }),
    tslib_1.__metadata(\\"design:type\\", String)
], UserAddress.prototype, \\"street\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.Field(_type => TypeGraphQL.Int, { nullable: true }),
    tslib_1.__metadata(\\"design:type\\", Number)
], UserAddress.prototype, \\"number\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.Field(_type => String, { nullable: false }),
    tslib_1.__metadata(\\"design:type\\", String)
], UserAddress.prototype, \\"city\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.ObjectType(\\"UserAddress\\", {})
], UserAddress);
"
`;

exports[`models should properly generate object type class for omitted prisma model: User 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
exports.User = void 0;
const tslib_1 = require(\\"tslib\\");
const TypeGraphQL = tslib_1.__importStar(require(\\"type-graphql\\"));
const GraphQLScalars = tslib_1.__importStar(require(\\"graphql-scalars\\"));
class User {
}
exports.User = User;
tslib_1.__decorate([
    TypeGraphQL.Field(_type => TypeGraphQL.Int, { nullable: false }),
    tslib_1.__metadata(\\"design:type\\", Number)
], User.prototype, \\"intIdField\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.Field(_type => String, { nullable: false }),
    tslib_1.__metadata(\\"design:type\\", String)
], User.prototype, \\"stringField\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.Field(_type => String, { nullable: true }),
    tslib_1.__metadata(\\"design:type\\", String)
], User.prototype, \\"optionalStringField\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.Field(_type => TypeGraphQL.Int, { nullable: false }),
    tslib_1.__metadata(\\"design:type\\", Number)
], User.prototype, \\"intField\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.Field(_type => TypeGraphQL.Float, { nullable: false }),
    tslib_1.__metadata(\\"design:type\\", Number)
], User.prototype, \\"floatField\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.Field(_type => Boolean, { nullable: false }),
    tslib_1.__metadata(\\"design:type\\", Boolean)
], User.prototype, \\"booleanField\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.Field(_type => Date, { nullable: false }),
    tslib_1.__metadata(\\"design:type\\", Date)
], User.prototype, \\"dateField\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.Field(_type => GraphQLScalars.JSONResolver, { nullable: false }),
    tslib_1.__metadata(\\"design:type\\", Object)
], User.prototype, \\"jsonField\\", void 0);
"
`;

exports[`models should properly generate object type class for prisma model when simpleResolvers option is enabled: User 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
exports.User = void 0;
const tslib_1 = require(\\"tslib\\");
const TypeGraphQL = tslib_1.__importStar(require(\\"type-graphql\\"));
class User {
}
exports.User = User;
tslib_1.__decorate([
    TypeGraphQL.Field(_type => TypeGraphQL.Int, { nullable: false }),
    tslib_1.__metadata(\\"design:type\\", Number)
], User.prototype, \\"id\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.Field(_type => Date, { nullable: false }),
    tslib_1.__metadata(\\"design:type\\", Date)
], User.prototype, \\"dateOfBirth\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.Field(_type => TypeGraphQL.Float, { nullable: true }),
    tslib_1.__metadata(\\"design:type\\", Number)
], User.prototype, \\"balance\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.ObjectType(\\"User\\", { simpleResolvers: true })
], User);
"
`;

exports[`models should properly generate object type class for prisma model with descriptions: User 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
exports.User = void 0;
const tslib_1 = require(\\"tslib\\");
const TypeGraphQL = tslib_1.__importStar(require(\\"type-graphql\\"));
const Post_1 = require(\\"../models/Post\\");
const UserCount_1 = require(\\"../resolvers/outputs/UserCount\\");
class User {
}
exports.User = User;
tslib_1.__decorate([
    TypeGraphQL.Field(_type => TypeGraphQL.Int, { nullable: false }),
    tslib_1.__metadata(\\"design:type\\", Number)
], User.prototype, \\"id\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.Field(_type => String, { nullable: false, description: \\"field doc\\" }),
    tslib_1.__metadata(\\"design:type\\", String)
], User.prototype, \\"stringField\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.Field(_type => TypeGraphQL.Int, { nullable: false }),
    tslib_1.__metadata(\\"design:type\\", Number)
], User.prototype, \\"intField\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.Field(_type => Boolean, { nullable: false, description: \\"multiline doc 1\\\\\\\\nmultiline doc 2\\" }),
    tslib_1.__metadata(\\"design:type\\", Boolean)
], User.prototype, \\"boolField\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.Field(_type => UserCount_1.UserCount, { nullable: true }),
    tslib_1.__metadata(\\"design:type\\", String)
], User.prototype, \\"_count\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.ObjectType(\\"User\\", { description: \\"User model doc\\" })
], User);
"
`;

exports[`models should properly generate object type class for prisma model with different scalar fields types: User 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
exports.User = void 0;
const tslib_1 = require(\\"tslib\\");
const TypeGraphQL = tslib_1.__importStar(require(\\"type-graphql\\"));
const GraphQLScalars = tslib_1.__importStar(require(\\"graphql-scalars\\"));
class User {
}
exports.User = User;
tslib_1.__decorate([
    TypeGraphQL.Field(_type => TypeGraphQL.Int, { nullable: false }),
    tslib_1.__metadata(\\"design:type\\", Number)
], User.prototype, \\"intIdField\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.Field(_type => String, { nullable: false }),
    tslib_1.__metadata(\\"design:type\\", String)
], User.prototype, \\"stringField\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.Field(_type => String, { nullable: true }),
    tslib_1.__metadata(\\"design:type\\", String)
], User.prototype, \\"optionalStringField\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.Field(_type => TypeGraphQL.Int, { nullable: false }),
    tslib_1.__metadata(\\"design:type\\", Number)
], User.prototype, \\"intField\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.Field(_type => TypeGraphQL.Float, { nullable: false }),
    tslib_1.__metadata(\\"design:type\\", Number)
], User.prototype, \\"floatField\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.Field(_type => Boolean, { nullable: false }),
    tslib_1.__metadata(\\"design:type\\", Boolean)
], User.prototype, \\"booleanField\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.Field(_type => Date, { nullable: false }),
    tslib_1.__metadata(\\"design:type\\", Date)
], User.prototype, \\"dateField\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.Field(_type => GraphQLScalars.JSONResolver, { nullable: false }),
    tslib_1.__metadata(\\"design:type\\", Object)
], User.prototype, \\"jsonField\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.ObjectType(\\"User\\", {})
], User);
"
`;

exports[`models should properly generate object type class for prisma model with enum and alias fields types: User 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
exports.User = void 0;
const tslib_1 = require(\\"tslib\\");
const TypeGraphQL = tslib_1.__importStar(require(\\"type-graphql\\"));
const Sample_1 = require(\\"../enums/Sample\\");
class User {
}
exports.User = User;
tslib_1.__decorate([
    TypeGraphQL.Field(_type => TypeGraphQL.Int, { nullable: false }),
    tslib_1.__metadata(\\"design:type\\", Number)
], User.prototype, \\"intIdField\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.Field(_type => Sample_1.Sample, { nullable: false }),
    tslib_1.__metadata(\\"design:type\\", String)
], User.prototype, \\"enumField\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.ObjectType(\\"User\\", {})
], User);
"
`;

exports[`models should properly generate object type class for prisma model with multiple attribute comments: User 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
exports.User = void 0;
const tslib_1 = require(\\"tslib\\");
const TypeGraphQL = tslib_1.__importStar(require(\\"type-graphql\\"));
class User {
  get accountBalance() {
    return this.balance ?? null;
  }
  set accountBalance(balance) {
    this.balance = balance;
  }
}
exports.User = User;
tslib_1.__decorate([
    TypeGraphQL.Field(_type => TypeGraphQL.Int, { nullable: false }),
    tslib_1.__metadata(\\"design:type\\", Number)
], User.prototype, \\"id\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.Field(_type => Date, { nullable: false }),
    tslib_1.__metadata(\\"design:type\\", Date)
], User.prototype, \\"dateOfBirth\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.Field(_type => String, { nullable: false }),
    tslib_1.__metadata(\\"design:type\\", String)
], User.prototype, \\"name\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.Field(_type => TypeGraphQL.Float, { nullable: true }),
    tslib_1.__metadata(\\"design:type\\", Number)
], User.prototype, \\"accountBalance\\", null);
tslib_1.__decorate([
    TypeGraphQL.ObjectType(\\"User\\", {})
], User);
"
`;

exports[`models should properly generate object type class for prisma model with native types: NativeTypeModel 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
exports.NativeTypeModel = void 0;
const tslib_1 = require(\\"tslib\\");
const TypeGraphQL = tslib_1.__importStar(require(\\"type-graphql\\"));
const GraphQLScalars = tslib_1.__importStar(require(\\"graphql-scalars\\"));
const scalars_1 = require(\\"../scalars\\");
class NativeTypeModel {
}
exports.NativeTypeModel = NativeTypeModel;
tslib_1.__decorate([
    TypeGraphQL.Field(_type => TypeGraphQL.Int, { nullable: false }),
    tslib_1.__metadata(\\"design:type\\", Number)
], NativeTypeModel.prototype, \\"id\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.Field(_type => GraphQLScalars.BigIntResolver, { nullable: true }),
    tslib_1.__metadata(\\"design:type\\", BigInt)
], NativeTypeModel.prototype, \\"bigInt\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.Field(_type => scalars_1.BytesScalar, { nullable: true }),
    tslib_1.__metadata(\\"design:type\\", Object)
], NativeTypeModel.prototype, \\"byteA\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.Field(_type => scalars_1.DecimalJSScalar, { nullable: true }),
    tslib_1.__metadata(\\"design:type\\", Object)
], NativeTypeModel.prototype, \\"decimal\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.ObjectType(\\"NativeTypeModel\\", {})
], NativeTypeModel);
"
`;

exports[`models should properly generate object type class for prisma model with omitted input field: User 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
exports.User = void 0;
const tslib_1 = require(\\"tslib\\");
const TypeGraphQL = tslib_1.__importStar(require(\\"type-graphql\\"));
class User {
}
exports.User = User;
tslib_1.__decorate([
    TypeGraphQL.Field(_type => TypeGraphQL.Int, { nullable: false }),
    tslib_1.__metadata(\\"design:type\\", Number)
], User.prototype, \\"id\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.Field(_type => Date, { nullable: false }),
    tslib_1.__metadata(\\"design:type\\", Date)
], User.prototype, \\"dateOfBirth\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.Field(_type => String, { nullable: false }),
    tslib_1.__metadata(\\"design:type\\", String)
], User.prototype, \\"name\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.Field(_type => TypeGraphQL.Float, { nullable: true }),
    tslib_1.__metadata(\\"design:type\\", Number)
], User.prototype, \\"balance\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.ObjectType(\\"User\\", {})
], User);
"
`;

exports[`models should properly generate object type class for prisma model with renamed fields: User 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
exports.User = void 0;
const tslib_1 = require(\\"tslib\\");
const TypeGraphQL = tslib_1.__importStar(require(\\"type-graphql\\"));
const Post_1 = require(\\"../models/Post\\");
const UserCount_1 = require(\\"../resolvers/outputs/UserCount\\");
class User {
  get firstName() {
    return this.name;
  }
  set firstName(name) {
    this.name = name;
  }
  get accountBalance() {
    return this.balance ?? null;
  }
  set accountBalance(balance) {
    this.balance = balance;
  }
}
exports.User = User;
tslib_1.__decorate([
    TypeGraphQL.Field(_type => TypeGraphQL.Int, { nullable: false }),
    tslib_1.__metadata(\\"design:type\\", Number)
], User.prototype, \\"id\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.Field(_type => Date, { nullable: false }),
    tslib_1.__metadata(\\"design:type\\", Date)
], User.prototype, \\"dateOfBirth\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.Field(_type => String, { nullable: false, description: \\"renamed field docs\\" }),
    tslib_1.__metadata(\\"design:type\\", String)
], User.prototype, \\"firstName\\", null);
tslib_1.__decorate([
    TypeGraphQL.Field(_type => TypeGraphQL.Float, { nullable: true }),
    tslib_1.__metadata(\\"design:type\\", Number)
], User.prototype, \\"accountBalance\\", null);
tslib_1.__decorate([
    TypeGraphQL.Field(_type => UserCount_1.UserCount, { nullable: true }),
    tslib_1.__metadata(\\"design:type\\", String)
], User.prototype, \\"_count\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.ObjectType(\\"User\\", {})
], User);
"
`;

exports[`models should properly generate object type class for prisma model without omitted output field: User 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
exports.User = void 0;
const tslib_1 = require(\\"tslib\\");
const TypeGraphQL = tslib_1.__importStar(require(\\"type-graphql\\"));
class User {
}
exports.User = User;
tslib_1.__decorate([
    TypeGraphQL.Field(_type => TypeGraphQL.Int, { nullable: false }),
    tslib_1.__metadata(\\"design:type\\", Number)
], User.prototype, \\"id\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.Field(_type => Date, { nullable: false }),
    tslib_1.__metadata(\\"design:type\\", Date)
], User.prototype, \\"dateOfBirth\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.Field(_type => String, { nullable: false }),
    tslib_1.__metadata(\\"design:type\\", String)
], User.prototype, \\"name\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.ObjectType(\\"User\\", {})
], User);
"
`;

exports[`models should properly generate object type classes for prisma models with cyclic relations when models are renamed: Article 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
exports.Article = void 0;
const tslib_1 = require(\\"tslib\\");
const TypeGraphQL = tslib_1.__importStar(require(\\"type-graphql\\"));
const Client_1 = require(\\"../models/Client\\");
class Article {
}
exports.Article = Article;
tslib_1.__decorate([
    TypeGraphQL.Field(_type => TypeGraphQL.Int, { nullable: false }),
    tslib_1.__metadata(\\"design:type\\", Number)
], Article.prototype, \\"id\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.Field(_type => TypeGraphQL.Int, { nullable: false }),
    tslib_1.__metadata(\\"design:type\\", Number)
], Article.prototype, \\"authorId\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.ObjectType(\\"Article\\", {})
], Article);
"
`;

exports[`models should properly generate object type classes for prisma models with cyclic relations when models are renamed: Client 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
exports.Client = void 0;
const tslib_1 = require(\\"tslib\\");
const TypeGraphQL = tslib_1.__importStar(require(\\"type-graphql\\"));
const Article_1 = require(\\"../models/Article\\");
const ClientCount_1 = require(\\"../resolvers/outputs/ClientCount\\");
class Client {
}
exports.Client = Client;
tslib_1.__decorate([
    TypeGraphQL.Field(_type => TypeGraphQL.Int, { nullable: false }),
    tslib_1.__metadata(\\"design:type\\", Number)
], Client.prototype, \\"id\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.Field(_type => ClientCount_1.ClientCount, { nullable: true }),
    tslib_1.__metadata(\\"design:type\\", String)
], Client.prototype, \\"_count\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.ObjectType(\\"Client\\", {})
], Client);
"
`;

exports[`models should properly generate object type classes for prisma models with cyclic relations: Post 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
exports.Post = void 0;
const tslib_1 = require(\\"tslib\\");
const TypeGraphQL = tslib_1.__importStar(require(\\"type-graphql\\"));
const User_1 = require(\\"../models/User\\");
class Post {
}
exports.Post = Post;
tslib_1.__decorate([
    TypeGraphQL.Field(_type => TypeGraphQL.Int, { nullable: false }),
    tslib_1.__metadata(\\"design:type\\", Number)
], Post.prototype, \\"id\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.Field(_type => TypeGraphQL.Int, { nullable: false }),
    tslib_1.__metadata(\\"design:type\\", Number)
], Post.prototype, \\"authorId\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.ObjectType(\\"Post\\", {})
], Post);
"
`;

exports[`models should properly generate object type classes for prisma models with cyclic relations: User 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
exports.User = void 0;
const tslib_1 = require(\\"tslib\\");
const TypeGraphQL = tslib_1.__importStar(require(\\"type-graphql\\"));
const Post_1 = require(\\"../models/Post\\");
const UserCount_1 = require(\\"../resolvers/outputs/UserCount\\");
class User {
}
exports.User = User;
tslib_1.__decorate([
    TypeGraphQL.Field(_type => TypeGraphQL.Int, { nullable: false }),
    tslib_1.__metadata(\\"design:type\\", Number)
], User.prototype, \\"id\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.Field(_type => UserCount_1.UserCount, { nullable: true }),
    tslib_1.__metadata(\\"design:type\\", String)
], User.prototype, \\"_count\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.ObjectType(\\"User\\", {})
], User);
"
`;

exports[`models should properly generate object type classes for prisma models with self relations: Service 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
exports.Service = void 0;
const tslib_1 = require(\\"tslib\\");
const TypeGraphQL = tslib_1.__importStar(require(\\"type-graphql\\"));
const ServiceCount_1 = require(\\"../resolvers/outputs/ServiceCount\\");
class Service {
}
exports.Service = Service;
tslib_1.__decorate([
    TypeGraphQL.Field(_type => TypeGraphQL.Int, { nullable: false }),
    tslib_1.__metadata(\\"design:type\\", Number)
], Service.prototype, \\"id\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.Field(_type => String, { nullable: false }),
    tslib_1.__metadata(\\"design:type\\", String)
], Service.prototype, \\"name\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.Field(_type => TypeGraphQL.Int, { nullable: true }),
    tslib_1.__metadata(\\"design:type\\", Number)
], Service.prototype, \\"sourceId\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.Field(_type => ServiceCount_1.ServiceCount, { nullable: true }),
    tslib_1.__metadata(\\"design:type\\", String)
], Service.prototype, \\"_count\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.ObjectType(\\"Service\\", {})
], Service);
"
`;

exports[`models when customPrismaImportPath is set to custom directory in node_modules should properly generate Prisma import path for model object type class: SampleModel 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
exports.SampleModel = void 0;
const tslib_1 = require(\\"tslib\\");
const TypeGraphQL = tslib_1.__importStar(require(\\"type-graphql\\"));
class SampleModel {
}
exports.SampleModel = SampleModel;
tslib_1.__decorate([
    TypeGraphQL.Field(_type => TypeGraphQL.Int, { nullable: false }),
    tslib_1.__metadata(\\"design:type\\", Number)
], SampleModel.prototype, \\"intIdField\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.Field(_type => TypeGraphQL.Int, { nullable: false }),
    tslib_1.__metadata(\\"design:type\\", Number)
], SampleModel.prototype, \\"intField\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.Field(_type => TypeGraphQL.Float, { nullable: false }),
    tslib_1.__metadata(\\"design:type\\", Number)
], SampleModel.prototype, \\"floatField\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.ObjectType(\\"SampleModel\\", {})
], SampleModel);
"
`;

exports[`models when customPrismaImportPath is set to custom repository directory should properly generate Prisma import path for model object type class: SampleModel 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
exports.SampleModel = void 0;
const tslib_1 = require(\\"tslib\\");
const TypeGraphQL = tslib_1.__importStar(require(\\"type-graphql\\"));
class SampleModel {
}
exports.SampleModel = SampleModel;
tslib_1.__decorate([
    TypeGraphQL.Field(_type => TypeGraphQL.Int, { nullable: false }),
    tslib_1.__metadata(\\"design:type\\", Number)
], SampleModel.prototype, \\"intIdField\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.Field(_type => TypeGraphQL.Int, { nullable: false }),
    tslib_1.__metadata(\\"design:type\\", Number)
], SampleModel.prototype, \\"intField\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.Field(_type => TypeGraphQL.Float, { nullable: false }),
    tslib_1.__metadata(\\"design:type\\", Number)
], SampleModel.prototype, \\"floatField\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.ObjectType(\\"SampleModel\\", {})
], SampleModel);
"
`;

exports[`models when emitIdAsIDType is set to true should properly generate model object type class: FirstModel 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
exports.FirstModel = void 0;
const tslib_1 = require(\\"tslib\\");
const TypeGraphQL = tslib_1.__importStar(require(\\"type-graphql\\"));
class FirstModel {
}
exports.FirstModel = FirstModel;
tslib_1.__decorate([
    TypeGraphQL.Field(_type => TypeGraphQL.ID, { nullable: false }),
    tslib_1.__metadata(\\"design:type\\", Number)
], FirstModel.prototype, \\"intIdField\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.Field(_type => TypeGraphQL.Int, { nullable: false }),
    tslib_1.__metadata(\\"design:type\\", Number)
], FirstModel.prototype, \\"intField\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.Field(_type => TypeGraphQL.Float, { nullable: false }),
    tslib_1.__metadata(\\"design:type\\", Number)
], FirstModel.prototype, \\"floatField\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.ObjectType(\\"FirstModel\\", {})
], FirstModel);
"
`;

exports[`models when emitIdAsIDType is set to true should properly generate model object type class: SecondModel 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
exports.SecondModel = void 0;
const tslib_1 = require(\\"tslib\\");
const TypeGraphQL = tslib_1.__importStar(require(\\"type-graphql\\"));
class SecondModel {
}
exports.SecondModel = SecondModel;
tslib_1.__decorate([
    TypeGraphQL.Field(_type => TypeGraphQL.ID, { nullable: false }),
    tslib_1.__metadata(\\"design:type\\", String)
], SecondModel.prototype, \\"stringIdField\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.Field(_type => String, { nullable: false }),
    tslib_1.__metadata(\\"design:type\\", String)
], SecondModel.prototype, \\"stringField\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.Field(_type => Boolean, { nullable: false }),
    tslib_1.__metadata(\\"design:type\\", Boolean)
], SecondModel.prototype, \\"booleanField\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.ObjectType(\\"SecondModel\\", {})
], SecondModel);
"
`;

exports[`models when emitIsAbstract is set to true should properly generate model object type class decorator options: SampleModel 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
exports.SampleModel = void 0;
const tslib_1 = require(\\"tslib\\");
const TypeGraphQL = tslib_1.__importStar(require(\\"type-graphql\\"));
class SampleModel {
}
exports.SampleModel = SampleModel;
tslib_1.__decorate([
    TypeGraphQL.Field(_type => TypeGraphQL.Int, { nullable: false }),
    tslib_1.__metadata(\\"design:type\\", Number)
], SampleModel.prototype, \\"intIdField\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.Field(_type => TypeGraphQL.Int, { nullable: false }),
    tslib_1.__metadata(\\"design:type\\", Number)
], SampleModel.prototype, \\"intField\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.Field(_type => TypeGraphQL.Float, { nullable: false }),
    tslib_1.__metadata(\\"design:type\\", Number)
], SampleModel.prototype, \\"floatField\\", void 0);
tslib_1.__decorate([
    TypeGraphQL.ObjectType(\\"SampleModel\\", { isAbstract: true })
], SampleModel);
"
`;
